# pucoti

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  flake.nix  fly.toml  neutralino.config.json  pucoti.py  pucoti.service  pyproject.toml  server.py  t.md
.github/workflows/: build-apps.yml  build-linux.yml  build-macos.yml  build-win.yml  build.yml  build_pucoti.yml  fly-deploy.yml
pucoti/: server.py
resources/: index.html
src/: app.py  constants.py  platforms.py
src/pucoti/: app.py  base_config.py  config.py  constants.py  controller.py  db.py  dfont.py
src/pucoti/screens/: base_screen.py  help_screen.py  main_screen.py  purpose_history_screen.py  social_screen.py
tests/: test_config.py
vue/: .gitignore  README.md  eslint.config.ts  index.html  neutralino.config.json  package.json  pnpm-lock.yaml
vue/src/: App.vue  auth_info.json  lib.ts  main.ts  platform.ts  storage.ts  timeUtils.ts
vue/src/assets/: main.css
vue/src/components/: CenteredChild.vue  TimeSince.vue  Timer.vue
vue/src/router/: index.ts  router.ts
vue/src/stores/: counter.ts  pucotiStore.ts
vue/src/types/: index.d.ts  neutralino.d.ts
vue/src/views/: HelpView.vue  HomeView.vue  IntentionHistoryView.vue  SettingsView.vue
web/: .gitignore  README.md  eslint.config.mjs  flake.nix  index.html  neutralino.config.json  package.json  pnpm-lock.yaml  styles.css  styles.min.css  things  todo.md
web/resources/: index.html  styles.css
web/resources/css/: help.css
web/resources/js/: home.js  index.js  lib.js  main.js  neutralino.d.ts
web/resources/pages/: help.html  home.html  index.html  intentionhistory.html  settings.html
webapp/: BUILD.md  build-mac.sh  create-appimage.sh  flake.nix  neutralino.config.json  package.json  pnpm-lock.yaml
webapp/.github/workflows/: build-macos.yml
webapp/_app_scaffolds/linux/: install.sh  myapp.desktop
webapp/packaging/app_scaffolds/linux/: myapp.desktop
webapp/packaging/icons/: pucoti.icns
webapp/scripts/: build-mac.sh  neutralino.config.json
webapp/www/: README.md  index.html  package.json  pnpm-lock.yaml
webapp/www/src/: App.vue  command-executor.ts  lib.ts  main.ts  neutralino-utils.ts  neutralino.d.ts  utils.ts
webapp/www/src/assets/: main.css
(+16 files in other folders)
