[project]
name = "pucoti"
dynamic = ["version"]
description = "A Purposeful Countdown Timer"
readme = "README.md"
license = { text = "GPL-3.0" }
keywords = ["timer", "countdown", "pygame", "gui"]
requires-python = ">=3.12"
dependencies = [
    "luckypot>=0.1.1",
    "platformdirs>=4.3.6",
    "pydantic>=2.9.2",
    "pygame-ce>=2.5.2",
    "pyobjc-framework-cocoa==10.3.1 ; sys_platform == 'darwin'",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "typer>=0.13.0",
]

[dependency-groups]
server = [
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
]
dev = [
    "hatch>=1.13.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
]

[project.urls]
Homepage = "https://github.com/ddorn/pucoti"
Repository = "https://github.com/ddorn/pucoti"

[project.scripts]
pucoti = "pucoti.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/pucoti"]

[tool.hatch.build.targets.wheel]
packages = ["src/pucoti"]


[tool.hatch.version]
path = "src/pucoti/version.py"

[tool.pytest.ini_options]
pythonpath = ["."]
